# OpenGLVideo

camera/: CMakeLists.txt  build.gradle
camera/src/androidTest/java/com/camera/yyl/: ExampleInstrumentedTest.kt
camera/src/main/: AndroidManifest.xml
camera/src/main/cpp/: demo.h
camera/src/main/cpp/AudioRecord/: AudioRecord.cpp  LogUtils.h  RecordBuffer.cpp  RecordBuffer.h
camera/src/main/cpp/librtmp/src/: AQueue.cpp  AQueue.h  LogUtils.h  RtmpCallBackJava.cpp  RtmpCallBackJava.h  RtmpPush.cpp  RtmpPush.h  yyl_rtmp.cpp
camera/src/main/java/com/camera/yyl/: MainActivity.kt
camera/src/main/java/com/camera/yyl/audio_record/: AudioRecordActivity.kt  AudioRecordUtils.kt  OpenSLESRecord.java
camera/src/main/java/com/camera/yyl/camera/: CameraActivity.kt  CameraFboRender.kt  CameraRender.kt  CameraView.kt  MyCamera.kt
camera/src/main/java/com/camera/yyl/egl/: EGLHelper.kt  EGLThread.kt  Renderer.kt  ShaderUtils.kt  YGLSurfaceView.kt
camera/src/main/java/com/camera/yyl/encodec/: BaseMediaEncoder.kt  MediaRecord.kt  RenderRecord.kt  VideoRecordActivity.kt
camera/src/main/java/com/camera/yyl/imagevideo/: ImageVideoActivity.kt  ImgVideoFboRender.kt  ImgVideoRender.kt  ImgVideoView.kt
camera/src/main/java/com/camera/yyl/rtmp/: RtmpPushVideo.kt  (+3 more)
camera/src/main/res/layout/: activity_audio_record.xml  activity_camera.xml  activity_image_video.xml  activity_live_push_video.xml  activity_main.xml  activity_video.xml
camera/src/main/res/raw/: vertex_shader.glsl
camera/src/main/res/values/: styles.xml
camera/src/test/java/com/camera/yyl/: ExampleUnitTest.kt
(+30 files in other folders)
